[gd_scene load_steps=13 format=3 uid="uid://ch6g24x33oyui"]

[ext_resource type="Script" path="res://scenes/levels/pandemonium_dimension.gd" id="1_dnu3f"]
[ext_resource type="PackedScene" uid="uid://ce0sukbhqo1ew" path="res://DungeonGeneration/dun_gen.tscn" id="2_s1b2o"]
[ext_resource type="PackedScene" uid="uid://dot510ncp1dim" path="res://scenes/hud.tscn" id="3_qtucb"]
[ext_resource type="FontFile" uid="uid://crvnlaim8ruey" path="res://Assets/Font/Shooting Star.otf" id="4_yhmho"]
[ext_resource type="Texture2D" uid="uid://c30aoue24h3og" path="res://Assets/ChaosSphere/sprite/chaoa0.png" id="5_bndpq"]
[ext_resource type="Texture2D" uid="uid://b8i20a5avrufo" path="res://Assets/ChaosSphere/sprite/chaob0.png" id="6_n2srh"]
[ext_resource type="Texture2D" uid="uid://cs8w7owpmqmlj" path="res://Assets/ChaosSphere/sprite/chaoc0.png" id="7_cwbj1"]
[ext_resource type="Texture2D" uid="uid://ch1tgmwij4ef6" path="res://Assets/ChaosSphere/sprite/chaod0.png" id="8_2ha2f"]
[ext_resource type="Texture2D" uid="uid://uroidlqynxw3" path="res://Assets/ChaosSphere/sprite/chaoe0.png" id="9_88qyb"]
[ext_resource type="Texture2D" uid="uid://byv1sala5yfio" path="res://Assets/ChaosSphere/sprite/chaof0.png" id="10_4340p"]
[ext_resource type="Texture2D" uid="uid://b7fuff00vnllw" path="res://Assets/ChaosSphere/sprite/chaog0.png" id="11_itkep"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1w4hl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bndpq")
}, {
"duration": 1.0,
"texture": ExtResource("6_n2srh")
}, {
"duration": 1.0,
"texture": ExtResource("7_cwbj1")
}, {
"duration": 1.0,
"texture": ExtResource("8_2ha2f")
}, {
"duration": 1.0,
"texture": ExtResource("9_88qyb")
}, {
"duration": 1.0,
"texture": ExtResource("10_4340p")
}, {
"duration": 1.0,
"texture": ExtResource("11_itkep")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PandemoniumDimension" type="Node3D" groups=["Level"]]
script = ExtResource("1_dnu3f")

[node name="DunGen" parent="." instance=ExtResource("2_s1b2o")]
border_size = 30
min_room_size = 5
max_room_size = 8

[node name="TimerScreen" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="TimerScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="TimerScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TimerScreen/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TimerScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.772549, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_yhmho")
theme_override_font_sizes/font_size = 30
text = "Transitioning in: "
horizontal_alignment = 2

[node name="CountDown" type="Label" parent="TimerScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.772549, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_yhmho")
theme_override_font_sizes/font_size = 50
text = "0
"
horizontal_alignment = 2

[node name="HUD" parent="." instance=ExtResource("3_qtucb")]

[node name="LoadingScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="LoadingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="LoadingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="LoadingScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_yhmho")
theme_override_font_sizes/font_size = 45
text = "Pandemonium
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="LoadingScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_yhmho")
text = "Enemies you didn't defeat came back stronger
Higher risks, better rewards..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="LoadingScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LoadingScreen/MarginContainer/VBoxContainer2"]
position = Vector2(71, -41)
sprite_frames = SubResource("SpriteFrames_1w4hl")
autoplay = "default"

[node name="Label" type="Label" parent="LoadingScreen/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_yhmho")
text = "Generating Level"

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 10.0
